force-app/main/default/objects/Contract_Discount_List__c/Contract_Discount_List__c.object-meta.xml
<CustomObject>
    <label>Contract Fare Discount</label>
    <nameField>
        <displayFormat>CD-{0000000000}</displayFormat>
        <label>Contract Discount Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Fare Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>