force-app/main/default/objects/Contract_Discount_List__c/fields/Approval_Comment_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment_Pricing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Comment (Pricing)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>