force-app/main/default/objects/Contract_Discount_List__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract Name</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Contract_Discount_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>