force-app/main/default/objects/Contract_Discount_List__c/fields/Contract_Fare_Discount_Unique_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fare_Discount_Unique_18_ID__c</fullName>
    <description>CRM-5511: To convert the 15 digit ID to 18 digit ID for data loader purpose.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Fare Discount Unique ID</label>
    <type>Text</type>
</CustomField>