force-app/main/default/objects/Contract_Discount_List__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Tier 2 / Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>