force-app/main/default/objects/Contract_Discount_List__c/fields/Fare_Combination__c.field-meta.xml
<CustomField>
    <fullName>Fare_Combination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fare Combination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>