force-app/main/default/objects/Contract_Discount_List__c/fields/Fare_Structure_Market__c.field-meta.xml
<CustomField>
    <fullName>Fare_Structure_Market__c</fullName>
    <formula>TEXT(FareStructure__r.Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>