force-app/main/default/objects/Contract_Discount_List__c/fields/Fare_Structure_Segment__c.field-meta.xml
<CustomField>
    <fullName>Fare_Structure_Segment__c</fullName>
    <formula>TEXT( FareStructure__r.Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>