force-app/main/default/objects/Contract_Discount_List__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <formula>TEXT(FareStructure__r.Network__c)</formula>
    <label>Network</label>
    <type>Text</type>
</CustomField>