force-app/main/default/objects/Contract_Discount_List__c/fields/QL_QF_EK_Contract_Fare_Structure__c.field-meta.xml
<CustomField>
    <fullName>QL_QF_EK_Contract_Fare_Structure__c</fullName>
    <description>Indicates whether the fare belongs to QF or EK (CRM-5330)</description>
    <formula>TEXT( FareStructure__r.QL_QF_EK__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF/EK</label>
    <type>Text</type>
</CustomField>