force-app/main/default/objects/Contract_Discount_List__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <formula>FareStructure__r.Route__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route</label>
    <type>Text</type>
</CustomField>