force-app/main/default/objects/Contract_Discount_List__c/fields/Route_Destination__c.field-meta.xml
<CustomField>
    <fullName>Route_Destination__c</fullName>
    <description>To hold the Destination info from Proposal Fare Discount object</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use 3 characters for Airport or 2 characters for Country</inlineHelpText>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>