force-app/main/default/objects/Contract_Discount_List__c/fields/Route_Origin__c.field-meta.xml
<CustomField>
    <fullName>Route_Origin__c</fullName>
    <description>To hold the Origin Information from Proposal Fare Discount</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>